chezmoi: Fixes email data key

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -10,7 +10,7 @@
 
 [data.github]
   name = {{ $name | quote }}
-  username = {{ $email | quote }}
+  email = {{ $email | quote }}
   signingkey = ""
 
 [data.bundler]
