--- a/dot_zsh/token.zsh.tmpl
+++ b/dot_zsh/token.zsh.tmpl
@@ -1,8 +1,6 @@
-{{ $noTokens:= env "NO_TOKENS" | not }}
-
-{{- if $noTokens }}
+{{- if not .minimal -}}
 export GITHUB_USERNAME="mdespuits"
-export GITHUB_TOKEN={{ (bitwardenFields "item" "acd12069-1b34-494a-9162-ad5a00cb6d23").token_github.value | quote }}
-export NPM_AUTH_TOKEN={{ (bitwardenFields "item" "acd12069-1b34-494a-9162-ad5a00cb6d23").token_npm_auth_token.value | quote }}
-export HOMEBREW_GITHUB_API_TOKEN={{ (bitwardenFields "item" "acd12069-1b34-494a-9162-ad5a00cb6d23").token_homebrew_github_api.value | quote }}
+export GITHUB_TOKEN={{ (bitwardenFields "item" .bitwarden.tokens).token_github.value | quote }}
+export NPM_AUTH_TOKEN={{ (bitwardenFields "item" .bitwarden.tokens).token_npm_auth_token.value | quote }}
+export HOMEBREW_GITHUB_API_TOKEN={{ (bitwardenFields "item" .bitwarden.tokens).token_homebrew_github_api.value | quote }}
 {{ end }}
