--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,14 +1,9 @@
 [user]
-  name = {{ .github.name }}
-  email = {{ .github.email }}
-{{ if gt (len .github.signingkey) 0 }}
-# Configure GPG signing commits
-[user]
-  signingkey = {{ .github.signingkey }}
+  name = {{ .name }}
+  email = {{ .email }}
+  signingkey = {{ .signingkey }}
 [commit]
   gpgsign = true
-
-{{end}}
 [color]
   ui = true
   sh = auto
