--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -22,6 +22,10 @@ sourceDir = "{{ .chezmoi.homeDir }}/.dotfiles"
   email = {{ $email | quote }}
   signingkey = "AA59D211400B6FC9"
 
+[data.spicetify]
+  theme = "Dribbblish"
+  scheme = "nord-dark"
+
 [data.bitwarden]
   tokens = "acd12069-1b34-494a-9162-ad5a00cb6d23"
   ssh = "fece7bf2-ac0c-4787-b13a-ad5c0120fd96"
