chezmoi: Automatc GnuPG key restoration

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -29,6 +29,7 @@ sourceDir = "{{ .chezmoi.homeDir }}/.dotfiles"
 [data.bitwarden]
   tokens = "acd12069-1b34-494a-9162-ad5a00cb6d23"
   ssh = "fece7bf2-ac0c-4787-b13a-ad5c0120fd96"
+  gpg = "777536fd-671b-4267-a788-ad5c012a7d98"
 
 [diff]
   pager = "delta"
