chezmoi: Re-arrange scripts to before/after

--- a/run_once_30_install_asdf.sh.tmpl
+++ b/run_once_30_install_asdf.sh.tmpl
@@ -34,7 +34,7 @@ installAsdfPlugins() {
 }
 
 installAsdfTools() {
-  if hasAsdf; then
+  if hasAsdf; the falsn
     log "Installing main asdf tools"
     goToDir "$HOME"
     asdf install
@@ -51,4 +51,5 @@ main() {
 }
 
 main
+# vim: ft=sh
 {{ end }}
