--- a/run_once_90_after_install-set-zsh-shell.sh.tmpl
+++ b/run_once_90_after_install-set-zsh-shell.sh.tmpl
@@ -1,5 +1,7 @@
 {{- if eq .chezmoi.os "darwin" -}}
-{{ include "./exe/helpers" }}
+#!/usr/bin/env bash
+
+source {{ joinPath .chezmoi.sourceDir "exe" "helpers" }}
 
 announce "Setting zsh as main shell"
 
