chezmoi: install asdf before and bitwarden later

--- a/run_once_90_after_isntall-gpg-keys.sh.tmpl
+++ b/run_once_90_after_isntall-gpg-keys.sh.tmpl
@@ -1,5 +1,7 @@
 {{- if eq .chezmoi.os "darwin" -}}
-{{ include "./exe/helpers" }}
+#!/usr/bin/env bash
+
+source {{ joinPath .chezmoi.sourceDir "exe" "helpers" }}
 
 # Restoring GnuPG keys
 #
