chezmoi: adds general install script

--- a/run_once_20_before_install-packages.sh.tmpl
+++ b/run_once_20_before_install-packages.sh.tmpl
@@ -10,10 +10,7 @@ announce "Installing essential Homebrew dependencies"
   "reattach-to-user-namespace"
   "fzf"
   "vim"
-  "mkcert"
-  "cloc"
   "cmake"
-  "certbot"
   "tree"
   "git-delta"
   "direnv"
@@ -21,17 +18,14 @@ announce "Installing essential Homebrew dependencies"
   "httpie"
   "jq"
   "lsd"
-  "editorconfig"
-  "entr"
+  "gpg"
   "curl"
   "universal-ctags"
   "ripgrep"
-  "zsh"
+  "the_silver_searcher"
   "yarn"
   "z"
   "memcached"
-  "imagemagick"
-  "imagemagick@6"
   "fortune"
 }}
 
@@ -52,8 +46,16 @@ announce "Installing essential Homebrew dependencies"
 {{- if not .minimal }}
   {{ $brews = concat $brews (list
     "ansible"
+    "zsh"
     "heroku/brew/heroku"
     "khanhas/tap/spicetify-cli"
+    "imagemagick"
+    "imagemagick@6"
+    "cloc"
+    "mkcert"
+    "editorconfig"
+    "entr"
+    "certbot"
     "mas"
     ) }}
 
