--- a/run_once_90_after_install-set-zsh-shell.sh.tmpl
+++ b/run_once_90_after_install-set-zsh-shell.sh.tmpl
@@ -7,7 +7,7 @@ announce "Setting zsh as main shell"
 
 main() {
   if [ -f /usr/local/bin/zsh ] && [[ $SHELL != "/usr/local/bin/zsh" ]]; then
-    sudo chsh -s "$(which zsh)" "$(whoami)"
+    sudo chsh -s "/bin/zsh" "$(whoami)"
   else
     log "Already using zsh"
   fi
