zsh: Re-adds syntax highlighting without zprezto

--- a/run_once_20_before_install-packages.sh.tmpl
+++ b/run_once_20_before_install-packages.sh.tmpl
@@ -23,6 +23,7 @@ announce "Installing essential Homebrew dependencies"
   "universal-ctags"
   "ripgrep"
   "the_silver_searcher"
+  "zsh-syntax-highlighting"
   "yarn"
   "z"
   "memcached"
