chezomi: Make minimal install even more minimal

--- a/run_once_20_before_install-packages.sh.tmpl
+++ b/run_once_20_before_install-packages.sh.tmpl
@@ -8,38 +8,16 @@ announce "Installing essential Homebrew dependencies"
   "git"
   "bitwarden-cli"
   "reattach-to-user-namespace"
+  "gpg"
   "fzf"
   "vim"
-  "cmake"
-  "tree"
-  "git-delta"
-  "direnv"
-  "bat"
-  "httpie"
-  "jq"
-  "lsd"
-  "gpg"
   "curl"
-  "universal-ctags"
-  "ripgrep"
-  "the_silver_searcher"
-  "zsh-syntax-highlighting"
-  "yarn"
-  "z"
-  "memcached"
-  "fortune"
 }}
 
 {{ $casks := list
   "alfred"
-  "postgres"
-  "sequel-pro"
-  "alfred"
   "firefox"
-  "google-chrome"
   "iterm2"
-  "sublime-merge"
-  "kap"
   "homebrew/cask-fonts/font-fira-code"
   "homebrew/cask-fonts/font-hack-nerd-font"
   }}
@@ -56,12 +34,36 @@ announce "Installing essential Homebrew dependencies"
     "mkcert"
     "editorconfig"
     "entr"
+    "watch"
     "certbot"
     "mas"
+    "cmake"
+    "tree"
+    "git-delta"
+    "direnv"
+    "bat"
+    "lsd"
+    "fd"
+    "httpie"
+    "jq"
+    "universal-ctags"
+    "ripgrep"
+    "the_silver_searcher"
+    "zsh-syntax-highlighting"
+    "yarn"
+    "z"
+    "memcached"
+    "fortune"
     ) }}
 
   {{ $casks = concat $casks (list
       "bitwarden"
+      "postgres"
+      "sequel-pro"
+      "alfred"
+      "google-chrome"
+      "sublime-merge"
+      "kap"
       "docker"
       "postman"
       "vlc"
