git: use vim, not nvim

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,7 +13,7 @@
   default = current
 [core]
 	excludesfile = ~/.gitexcludes
-  editor = nvim
+  editor = vim
   symlinks = true
 [credential]
   helper = osxkeychain
